fix: button text not centered horizontally

--- a/styles/components/_input.scss
+++ b/styles/components/_input.scss
@@ -7,6 +7,5 @@ input, text, select {
   padding: 8px 14px;
   color: rgba(255, 255, 255, 0.5);;
   font-size: 14px;
-  line-height: 165%;
   height: 40px;
 }
